# colorverse

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: release-executable.yaml
docs/: DEVELOPMENT.md
src/: color_vision.rs  core.rs  lib.rs  main.rs
src/cli/: args.rs
src/cli/args/: mode.rs  sub_command.rs
src/cli/args/sub_command/: daltonize_args.rs  simulate_args.rs
src/color_vision/: color_utils.rs  color_vision_type.rs
src/core/: color.rs  color_vision.rs  image.rs  vec3.rs
src/core/color/: color_basis.rs  color_vision.rs  util.rs
src/core/color/color_vision/: color_vision_iterator.rs
src/core/color_vision/: color_matrices.rs  color_utils.rs  color_vision_type.rs
src/core/color_vision/color_vision_type/: color_vision_type_iterator.rs
src/core/image/: converted_image.rs  source_image.rs
