[package]
name = "colorverse"
version = "0.6.5"
edition = "2024"

description = "Color vision diversity (色覚多様性) convertor - not only simulate but also daltonize (色の補正)"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["graphics", "accessibility", "computer-vision", "rendering", "command-line-utilities"]
keywords = ["color", "vector", "graphics", "image", "simulation"]
repository = "https://github.com/accessible-colors/colorverse"
readme = "README.md"
rust-version = "1.87.0"

exclude = [
    "/tests/fixtures/*",
    "/docs/assets/*",
]

[dependencies]
argh = "0"
image = { version = "^0.25", default-features = false, features = ["avif", "gif", "jpeg", "png", "tiff", "webp"] }
nalgebra = { version = "^0.34", default-features = false }
